# PoliTrack

./: .gitignore  README.md  dummy.env  environment.yml  pyproject.toml  requirements.txt  start.sh
app/: main.py
app/auth/: auth.py
app/configs/: __init__.py  configs.yaml
app/dependencies/: auth.py
app/google/: forms.py
app/models/: hierarchy.py  user.py
app/routes/: auth.py  hierarchy.py  users.py
app/schemas/: hierarchy.py  misc.py  tokens.py  user.py
app/services/: admin_unit_service.py  auth_service.py  db.py  user_service.py
static/css/: login.css
static/js/: login.js  main.js  manage-users.js
templates/: index.html  login.html  manage-users.html
